--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 11
+      - run: npm install vsce -g
       - run: npm install gulp
       - run: npm install
       - run: gulp test
