--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "team",
-  "displayName": "Azure Repos",
+  "name": "argutec-azure-repos",
+  "displayName": "Argutec Azure Repos",
   "description": "Connect to Azure Repos and work with Git and Team Foundation Version Control (TFVC) repositories. Manage your pull requests, work items, and more.",
-  "version": "1.161.0",
+  "version": "1.2007.1",
   "publisher": "ms-vsts",
   "icon": "assets/team.png",
   "markdown": "standard",
@@ -24,11 +24,11 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/Microsoft/azure-repos-vscode.git"
+    "url": "https://github.com/argutec-sro/azure-repos-vscode.git"
   },
-  "bugs": "https://github.com/Microsoft/azure-repos-vscode/issues",
+  "bugs": "https://github.com/argutec-sro/azure-repos-vscode/issues",
   "license": "SEE LICENSE IN LICENSE.txt",
-  "homepage": "https://github.com/Microsoft/azure-repos-vscode/blob/master/README.md",
+  "homepage": "https://github.com/argutec-sro/azure-repos-vscode/blob/master/README.md",
   "engines": {
     "vscode": "^1.12.0"
   },
