Pusblishing to VSCODE constants

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,10 +16,17 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 11
+      
+      - name: Set RELEASE_VERSION
+        run: echo ::set-env name=RELEASE_VERSION::${GITHUB_REF#refs/*/}
+  
       - run: npm install vsce -g
       - run: npm install gulp
       - run: npm install
+      
+      - name: set version
+        run: sed -i 's/1.2007.1/'"$RELEASE_VERSION"'/g' ./src/helpers/constants.t
+      
       - run: gulp test
-      - run: gulp build
       - run: gulp package
 
