--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "argutec-azure-repos",
   "displayName": "Argutec Azure Repos",
   "description": "Connect to Azure Repos and work with Git and Team Foundation Version Control (TFVC) repositories. Manage your pull requests, work items, and more.",
-  "version": "1.2007.2",
-  "publisher": "ms-vsts",
+  "version": "1.2007.1",
+  "publisher": "argutec",
   "icon": "assets/team.png",
   "markdown": "standard",
   "galleryBanner": {
