--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,6 +35,7 @@ jobs:
       - run: git config --global user.name "Argutec"
       - run: git commit -m "Set version"
 
+      - run: gulp build
       - run: gulp test
 
       - name: publish
